# couchbase-ruby-client

./: .clang-format  .gitignore  .gitmodules  .rubocop.yml  .rubocop_todo.yml  .ruby-gemset  .travis.yml  .yardopts  CODE_OF_CONDUCT.md  CONTRIBUTING.markdown  CONTRIBUTING.md  Gemfile  HISTORY.markdown  Makefile  README.markdown  README.md  RELEASE_NOTES.markdown  Rakefile  WINDOWS.md  couchbase-protostellar.gemspec  couchbase-stellar_nebula.gemspec  couchbase.gemspec
couchbase-opentelemetry/: .rubocop.yml  .yardopts  README.md  Rakefile  couchbase-opentelemetry.gemspec
examples/: analytics.rb  auth.rb  crud.rb  managing_analytics_indexes.rb  managing_buckets.rb  managing_collections.rb  managing_query_indexes.rb  managing_search_indexes.rb  managing_users.rb  managing_view_indexes.rb  minimal.rb  query.rb  query_with_consistency.rb  range_scan.rb  (+4 more)
ext/: .clang-format  .clang-format.7  .clang-tidy  .cmake-format.yaml  .gitignore  0001-fix-build-for-mingw-w64-ucrt-x86_64-toolchain.patch  CMakeLists.txt  build_config.hxx.in  build_version.hxx.in  couchbase.cxx  ext_build_version.hxx.in  extconf.rb  rcb_analytics.cxx  rcb_analytics.hxx  rcb_backend.cxx  rcb_backend.hxx  rcb_buckets.cxx  rcb_buckets.hxx  rcb_collections.cxx  rcb_collections.hxx  rcb_crud.cxx  rcb_crud.hxx  rcb_diagnostics.cxx  rcb_diagnostics.hxx  rcb_exceptions.cxx  rcb_exceptions.hxx  rcb_extras.cxx  rcb_extras.hxx  rcb_hdr_histogram.cxx  rcb_hdr_histogram.hxx  rcb_logger.cxx  rcb_logger.hxx  rcb_multi.cxx  rcb_multi.hxx  rcb_observability.cxx  rcb_observability.hxx  rcb_query.cxx  rcb_query.hxx  rcb_range_scan.cxx  rcb_range_scan.hxx  (+10 more)
ext/cmake/: Backtrace.cmake  BuildTracing.cmake  CompilerWarnings.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Testing.cmake  ThirdPartyDependencies.cmake  VersionInfo.cmake
ext/couchbase/: bucket.hxx  capabilities.hxx  cluster.hxx  cluster_options.hxx  collections_manifest.hxx  configuration.hxx  configuration_monitor.hxx  couchbase.cxx  diagnostics.hxx  document_id.hxx  error_map.hxx  errors.hxx  mutation_token.hxx  operations.hxx  origin.hxx  service_type.hxx  timeout_defaults.hxx  version.hxx
ext/couchbase/cbcrypto/: cbcrypto.cc  cbcrypto.h
ext/couchbase/cbsasl/: client.cc  client.h  context.cc  context.h  error.h  mechanism.cc  mechanism.h
ext/couchbase/cbsasl/plain/: plain.cc  plain.h
ext/couchbase/cbsasl/scram-sha/: scram-sha.cc  scram-sha.h  stringutils.cc  stringutils.h
ext/couchbase/error_context/: analytics.hxx  http.hxx  key_value.hxx  query.hxx  search.hxx  view.hxx
ext/couchbase/io/: binary_message.hxx  binary_parser.hxx  dns_client.hxx  dns_codec.hxx  dns_config.hxx  dns_message.hxx  http_command.hxx  http_context.hxx  http_message.hxx  http_parser.hxx  http_session.hxx  http_session_manager.hxx  key_value_session.hxx  mcbp_command.hxx  mcbp_context.hxx  mcbp_message.hxx  mcbp_parser.hxx  mcbp_session.hxx  query_cache.hxx  retry_action.hxx  retry_context.hxx  retry_orchestrator.hxx  retry_reason.hxx  retry_strategy.hxx  session_manager.hxx  streams.hxx
ext/couchbase/metrics/: logging_meter.hxx  logging_meter_options.hxx  meter.hxx  noop_meter.hxx
ext/couchbase/operations/: analytics_dataset_create.hxx  analytics_dataset_drop.hxx  analytics_dataset_get_all.hxx  analytics_dataverse_create.hxx  analytics_dataverse_drop.hxx  analytics_get_pending_mutations.hxx  analytics_index_create.hxx  analytics_index_drop.hxx  analytics_index_get_all.hxx  analytics_link.hxx  analytics_link_azure_blob_external.hxx  analytics_link_connect.hxx  analytics_link_couchbase_remote.hxx  analytics_link_create.hxx  analytics_link_disconnect.hxx  analytics_link_drop.hxx  analytics_link_get_all.hxx  analytics_link_replace.hxx  analytics_link_s3_external.hxx  bucket_create.hxx  bucket_drop.hxx  bucket_flush.hxx  bucket_get.hxx  bucket_get_all.hxx  bucket_settings.hxx  bucket_update.hxx  cluster_developer_preview_enable.hxx  collection_create.hxx  collection_drop.hxx  collections_manifest_get.hxx  command.hxx  design_document.hxx  document_analytics.hxx  document_append.hxx  document_decrement.hxx  document_exists.hxx  document_get.hxx  document_get_and_lock.hxx  document_get_and_touch.hxx  document_get_projected.hxx  (+55 more)
ext/couchbase/platform/: backtrace.c  backtrace.h  base64.cc  base64.h  random.cc  random.h  string_hex.cc  string_hex.h  terminate_handler.cc  terminate_handler.h  uuid.cc  uuid.h
ext/couchbase/protocol/: client_opcode.hxx  client_request.hxx  client_response.hxx  cmd_append.hxx  cmd_cluster_map_change_notification.hxx  cmd_decrement.hxx  cmd_exists.hxx  cmd_get.hxx  cmd_get_and_lock.hxx  cmd_get_and_touch.hxx  cmd_get_cluster_config.hxx  cmd_get_collection_id.hxx  cmd_get_collections_manifest.hxx  cmd_get_error_map.hxx  cmd_hello.hxx  cmd_increment.hxx  cmd_info.hxx  cmd_insert.hxx  cmd_lookup_in.hxx  cmd_mutate_in.hxx  cmd_noop.hxx  cmd_prepend.hxx  cmd_remove.hxx  cmd_replace.hxx  cmd_sasl_auth.hxx  cmd_sasl_list_mechs.hxx  cmd_sasl_step.hxx  cmd_select_bucket.hxx  cmd_touch.hxx  cmd_unlock.hxx  cmd_upsert.hxx  datatype.hxx  durability_level.hxx  enhanced_error_info.hxx  frame_info_id.hxx  hello_feature.hxx  magic.hxx  server_opcode.hxx  server_request.hxx  status.hxx  (+1 more)
ext/couchbase/tracing/: constants.hxx  noop_tracer.hxx  request_tracer.hxx  threshold_logging_options.hxx  threshold_logging_tracer.hxx
ext/couchbase/utils/: byteswap.hxx  connection_string.hxx  crc32.hxx  name_codec.hxx  url_codec.hxx
ext/couchbase_ext/: .gitignore  arguments.c  arithmetic.c  bucket.c  context.c  couchbase_ext.c  couchbase_ext.h  delete.c  errors.c  eventmachine_plugin.c  extconf.rb  flush.c  get.c  gethrtime.c  http.c  multithread_plugin.c  n1ql.c  observe.c  plugin_common.c  result.c  stats.c  store.c  timer.c  touch.c  unlock.c  utils.c  version.c  views.c
ext/test/: CMakeLists.txt  main.cxx  test_helper.hxx  test_helper_native.hxx  test_helper_ruby.hxx  test_native_binary_operations.cxx  test_native_diagnostics.cxx  test_native_trivial_crud.cxx  test_native_trivial_query.cxx  test_ruby_trivial_crud.cxx  test_ruby_trivial_query.cxx
(+546 files in other folders)
